src/main/java/application/testData/invalidRandomAddresses/easy/RandomAddressesWithAlternateNames.java
package application.testData.invalidRandomAddresses.easy;

public class RandomAddressesWithAlternateNames {
}
